# Geode-GDDLIntegration

./: CMakeLists.txt  mod.json
src/: RatingsManager.cpp
src/layers/: GDDLAdvancedLevelInfoPopup.cpp  GDDLLevelInfoPopup.cpp  GDDLLoginLayer.cpp  GDDLLoginLayer.h  GDDLRatingSubmissionLayer.cpp  GDDLRatingSubmissionLayer.h  GDDLSearchLayer.h
src/settings/: LoginSettingNodeV3.h
